--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=61fce7c3ef2addc16e14",
+    "/css/app.css": "/css/app.css?id=7cdf988424d1c8bd8202"
 }
