--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.0",
         "mews/captcha": "~3.0",
         "overtrue/easy-sms": "^1.1",
-        "overtrue/laravel-lang": "~3.0"
+        "overtrue/laravel-lang": "~3.0",
+        "summerblue/laravel-active": "6.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
