--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.3",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
@@ -18,6 +19,7 @@
         "mews/purifier": "~3.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
+        "overtrue/pinyin": "~4.0",
         "summerblue/laravel-active": "6.*"
     },
     "require-dev": {
